--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     tools:context="com.example.smartcalendar.MainActivity">
     <item
         android:id="@+id/action_ai"
-        android:icon="@android:drawable/ic_btn_speak_now"
+        android:icon="@drawable/ic_star_shine_24px"
         android:title="@string/ai_assistant"
         app:showAsAction="ifRoom" />
     <item
