--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_sync"
-        android:icon="@android:drawable/ic_popup_sync"
+        android:icon="@drawable/ic_sync_24px"
         android:title="@string/action_sync"
         app:showAsAction="ifRoom" />
 </menu>
